--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -315,6 +315,27 @@ Message Box
   background: #1D7745;
 }
 
+.message-box .message-file {
+  position: absolute;
+  z-index: 1;
+  top: 9px;
+  right: 5px;
+  color: #fff;
+  border: none;
+  background: #248A52;
+  font-size: 10px;
+  text-transform: uppercase;
+  line-height: 1;
+  padding: 6px 10px;
+  border-radius: 10px;
+  outline: none !important;
+  -webkit-transition: background .2s ease;
+  transition: background .2s ease;
+}
+.message-box .message-file:hover {
+  background: #1D7745;
+}
+
 /*--------------------
 Custom Srollbar
 --------------------*/
